<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="#00000000" >
        
        <TextView 
            android:id="@+id/tv_receipt_message"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center|left"
            android:layout_marginTop="30dp"
            android:textSize="32sp"
            android:paddingLeft="40dp"
            android:text="@string/user_info_tip11"/>
        
        <RelativeLayout
            android:id="@+id/rl_tip_name_01"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/tv_receipt_message"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_name_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_name_00"/>
            
            <TextView 
                android:id="@+id/tv_receipt_real_name"
                android:layout_toRightOf="@+id/tv_tip_name_01"
                style="@style/TextViewStyle4"
                android:text="芒果乐"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/el_tip_phone_01"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/rl_tip_name_01"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_phone_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_phone_00"/>
            
            <TextView 
                android:id="@+id/tv_receipt_contact_phone"
                android:layout_toRightOf="@+id/tv_tip_phone_01"
                style="@style/TextViewStyle4"
                android:text="183-8254-1233"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_tip_phone2_01"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/el_tip_phone_01"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_phone2_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_phone2"/>
            
            <TextView 
                android:id="@+id/tv_receipt_common_telephone"
                android:layout_toRightOf="@+id/tv_tip_phone2_01"
                style="@style/TextViewStyle4"
                android:text="0755-82332323" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_tip_address_01"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_below="@+id/rl_tip_phone2_01"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_address_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_address"/>
            
            <RelativeLayout 
	            android:id="@+id/rl_receipt_street_address"
	            android:layout_width="359dp"
	            android:layout_height="63dp"
	            android:layout_toRightOf="@+id/tv_tip_address_01" >
	            
	            <EditText
		            android:id="@+id/et_receipt_street_address"
		            android:layout_centerVertical="true"
		            android:nextFocusRight="@+id/tv_receipt_svae"
		            style="@style/EditTextStyle"
		            android:text="深圳宝安区" />
	            
	        </RelativeLayout>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_tip_home_01"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_below="@+id/rl_tip_address_01"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_home_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_home"/>
            
            <RelativeLayout 
	            android:id="@+id/rl_receipt_cell_name"
	            android:layout_width="359dp"
	            android:layout_height="63dp"
	            android:layout_toRightOf="@+id/tv_tip_home_01" >
	            
	            <EditText
		            android:id="@+id/et_receipt_cell_name"
		            android:layout_centerVertical="true"
		            android:nextFocusRight="@+id/tv_receipt_svae"
		            style="@style/EditTextStyle"
		            android:text="永丰社区" />
	            
	        </RelativeLayout>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_tip_home_part_01"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_below="@+id/rl_tip_home_01"
            android:background="#00000000">
            
            <TextView 
                android:id="@+id/tv_tip_home_part_01"
                style="@style/TextViewStyle3"
                android:text="@string/tip_home_part"/>
            
            <RelativeLayout 
	            android:id="@+id/rl_receipt_corridor_unit"
	            android:layout_width="359dp"
	            android:layout_height="63dp"
	            android:layout_toRightOf="@+id/tv_tip_home_part_01" >
	            
	            <EditText
		            android:id="@+id/et_receipt_corridor_unit"
		            android:layout_centerVertical="true"
		            android:nextFocusRight="@+id/tv_receipt_svae"
		            style="@style/EditTextStyle"
		            android:text="6-57" />
	            
	        </RelativeLayout>
        </RelativeLayout>
        
        <TextView 
            android:id="@+id/tv_receipt_svae"
            android:layout_width="251dp"
            android:layout_height="70dp"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/rl_tip_home_part_01"
            android:gravity="center"
            style="@style/FocusableStyle"
            android:text="@string/save"
            android:background="@drawable/butt_bg_style"/>
        
    </RelativeLayout>
</RelativeLayout>