<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#00000000" >
    
    <TextView 
        android:id="@+id/tv_confirm_pay_message"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="36sp"
        style="@style/NoFocusableStyle"
        android:text="@string/user_info_tip12" />
        
     <EditText 
        android:id="@+id/et_confirm_password_pay"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:inputType="numberPassword"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_confirm_pay_message"
        android:textColor="#FFFFFF"
        style="@style/FocusableStyle"
        android:background="@drawable/edit_bg_style" />
    
    <TextView 
        android:id="@+id/tv_confirm_pay_next_step"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/et_confirm_password_pay"
        android:layout_centerHorizontal="true"
        style="@style/FocusableStyle"
        android:background="@drawable/butt_bg_style"
        android:textSize="32sp"
        android:text="@string/confirm"/>
    
    <TextView 
        android:id="@+id/tv_retrieve_password"
        android:layout_width="252dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_confirm_pay_next_step"
        style="@style/FocusableStyle"
        android:background="@drawable/tv_butt_red_style"
        android:textSize="32sp"
        android:text="@string/retrieve_password"/>
    
</RelativeLayout>