<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:background="#00000000" >
    
    <TextView 
        android:id="@+id/tv_purchase_completed"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="32sp"
        style="@style/NoFocusableStyle"
        android:text="@string/user_info_tip16" />
    
    <RelativeLayout
        android:id="@+id/rl_new_pay_message" 
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="#00000000"
        android:layout_below="@+id/tv_purchase_completed">
        
        <TextView 
	        android:id="@+id/tv_purchase_completed_message"
	        android:layout_width="750dp"
	        android:layout_height="80dp"
	        android:gravity="center"
	        android:textSize="24sp"
	        android:lines="3"
	        android:textColor="#000000"
	        android:layout_centerInParent="true"/>
	    
	    <TextView 
	        android:id="@+id/et_new_pay_passwords"
	        android:layout_width="150dp"
	        android:layout_height="72dp"
	        android:gravity="center"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/tv_purchase_completed_message"
	        android:textSize="40sp"
	        android:textColor="#FFFFFF"
	        android:layout_centerInParent="true"
	        android:background="@color/tv_color_02" />
        
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/tv_purchase_completed_next_step"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/rl_new_pay_message"
        android:layout_centerHorizontal="true"
        style="@style/FocusableStyle"
        android:background="@drawable/butt_bg_style"
        android:textSize="32sp"
        android:text="@string/confirm"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/user_info_tip18"/>
</RelativeLayout>