<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:background="#00000000" >
    
    <TextView 
        android:id="@+id/tv_message_02"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="#000000"
        android:gravity="center|left"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:textSize="26sp"
        style="@style/NoFocusableStyle"
        android:text="@string/user_info_tip6" />
    
    <RelativeLayout
        android:id="@+id/rl_pay_message" 
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="#00000000"
        android:layout_below="@+id/tv_message_02">
        
        <EditText 
	        android:id="@+id/et_pay_password"
	        android:layout_width="360dp"
	        android:layout_height="72dp"
	        android:inputType="numberPassword"
	        android:gravity="center"
	        android:textSize="40sp"
	        android:textColor="#FFFFFF"
	        style="@style/FocusableStyle"
	        android:layout_centerInParent="true"
	        android:background="@drawable/edit_bg_style" />
	    
	    <EditText 
	        android:id="@+id/et_pay_passwords"
	        android:layout_width="360dp"
	        android:layout_height="72dp"
	        android:gravity="center"
	        android:layout_marginTop="30dp"
	        android:inputType="numberPassword"
	        android:layout_below="@+id/et_pay_password"
	        android:textSize="40sp"
	        android:textColor="#FFFFFF"
	        style="@style/FocusableStyle"
	        android:layout_centerInParent="true"
	        android:background="@drawable/edit_bg_style" />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true" >
        
        <TextView
            android:id="@+id/tv_remarks_02"
            android:layout_width="560dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:singleLine="true"
            android:text="@string/user_info_tip7"/>
        
        <TextView 
            android:id="@+id/tv_pay_next_step"
            android:layout_width="251dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@+id/tv_remarks_02"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            style="@style/FocusableStyle"
            android:background="@drawable/butt_bg_style"
            android:textSize="32sp"
            android:text="@string/next_step"/>
    </RelativeLayout>
</RelativeLayout>